Final fix for invisible link by using green color in picachoose CSS

--- a/public/stylesheets/styles/base.css
+++ b/public/stylesheets/styles/base.css
@@ -1,7 +1,6 @@
 /* Just for the example. Fee free to delete these three lines */
 body{font-family:Helvetica, sans-serif;}
-a{color:white;}
-.pikachoose {width: 520px; margin: 0 auto;}
+pikachoose {width: 520px; margin: 0 auto;}
 
 /* Style the thumbnails */
 .pika-thumbs{ padding: 0 16px; height: 75px; }
@@ -31,9 +30,9 @@ a{color:white;}
 	.pika-textnav a.next {float: right; width: auto; display: block;}
 
 /*for the tool tips*/
-.pika-tooltip{font-size:12px;position:absolute;color:white;padding:3px; background-color: rgba(0,0,0,0.7);border:3px solid black;}
-.pika-counter{position: absolute;bottom: 45px;left:15px;color:white;background:rgba(0,0,0,0.7);font-size:11px;padding:3px;-moz-border-radius: 5px;border-radius:5px;}
+.pika-tooltip{font-size:12px;position:absolute;color:green;padding:3px; background-color: rgba(0,0,0,0.7);border:3px solid black;}
+.pika-counter{position: absolute;bottom: 45px;left:15px;color:green;background:rgba(0,0,0,0.7);font-size:11px;padding:3px;-moz-border-radius: 5px;border-radius:5px;}
 
 /* If using user thumbnails there's a pause well the new large image loads. This is the loader for that */		
-.pika-loader{ background:url(loading.gif) 3px 3px no-repeat #000; background-color:rgba(0,0,0,0.9); color:white; width:60px; font-size:11px; padding:5px 3px; 
+.pika-loader{ background:url(loading.gif) 3px 3px no-repeat #000; background-color:rgba(0,0,0,0.9); color:green; width:60px; font-size:11px; padding:5px 3px; 
 	text-align:right; position:absolute; top:15px; right:15px; }
