--- a/public/stylesheets/styles/css3.css
+++ b/public/stylesheets/styles/css3.css
@@ -4,7 +4,7 @@
 
 
 body{font-family: sans-serif;background:#FCFCFC;}
-a{color:white;}
+a{color:green;}
 .pikachoose {width: 500px; margin: 0 auto;}
 .pika-stage {position: relative;border: 3px solid #010101;
 	-moz-box-shadow: 5px 5px 2px #888;-webkit-box-shadow: 5px 5px 2px #888;box-shadow: 5px 5px 2px #888;}
@@ -40,8 +40,8 @@ a{color:white;}
 		.pika-thumbs li .clip {position:relative;height:100%;text-align: center; vertical-align: center; overflow: hidden;}
 
 /*for the tool tips*/
-.pika-tooltip{font-size:12px;position:absolute;color:white;padding:3px; background-color: rgba(0,0,0,0.7);border:3px solid black;}
-.pika-counter{position: absolute;bottom: 15px;left:15px;color:white;background:rgba(0,0,0,0.7);font-size:11px;padding:3px;-moz-border-radius: 5px;border-radius:5px;}
+.pika-tooltip{font-size:12px;position:absolute;color:green;padding:3px; background-color: rgba(0,0,0,0.7);border:3px solid black;}
+.pika-counter{position: absolute;bottom: 15px;left:15px;color:green;background:rgba(0,0,0,0.7);font-size:11px;padding:3px;-moz-border-radius: 5px;border-radius:5px;}
 	
 		
 /* jCarousel Styles */
