--- a/public/stylesheets/styles/simple.css
+++ b/public/stylesheets/styles/simple.css
@@ -1,5 +1,5 @@
 body {font-family: helvetica, sans-serif;}
-a{color:white;}
+a{color:green;}
 
 .pikachoose {width: 800px; margin: 0 auto;}
 .pika-stage {position: relative; width: 800px; height:540px; -moz-box-shadow: 10px 10px 5px #888;-webkit-box-shadow: 10px 10px 5px #888;
