--- a/source/stylesheets/styles/tooltip.css
+++ b/source/stylesheets/styles/tooltip.css
@@ -1,5 +1,5 @@
 body {font-family: helvetica, arial, sans-serif;}
-a{color:white;}
+a{color:green;}
 .pika-wrap {width: 520px; margin: 0 auto;}
 
 .pika-image {position: relative; height: 340px; width: 500px; background: #fafafa; border: 1px solid #e5e5e5; padding: 10px;}
@@ -29,7 +29,7 @@ a{color:white;}
 		.pika-thumbs li .clip {position:relative;width: 74px; height: 74px; text-align: center; vertical-align: center; overflow: hidden;}
 
 .clip span{background-color:black;position:absolute;top:5px;left:5px;display:block;}
-.pika-tooltip{font-size:12px;position:absolute;color:white;padding:3px; background-color: rgba(0,0,0,0.7);border:3px solid black;}
+.pika-tooltip{font-size:12px;position:absolute;color:green;padding:3px; background-color: rgba(0,0,0,0.7);border:3px solid black;}
 ul#pikame{width:570px;}
 		
 		
