--- a/source/stylesheets/styles/transitions.css
+++ b/source/stylesheets/styles/transitions.css
@@ -1,5 +1,5 @@
 body {font-family: helvetica, arial, sans-serif;}
-a{color:white;}
+a{color:green;}
 
 .pika-wrap {width: 520px; margin: 0 auto;}
 
